@@ -1,5 +1,9 @@
 1998-04-17  Stephan Kulow  <coolo@kde.org>
 
+	* kfiledetaillist.cpp: implemented the date field
+	
+	* kfiledetaillist.cpp: made the columns wider
+
 	* kfileinfocontents.cpp: use the new icons by Mark
 
 Thu Apr 16 10:51:24 1998  Daniel Grana <grana@ie.iwi.unibe.ch>
